ingress/nginx/terraform/example/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-deploy
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
